feature card styles

--- a/index.html
+++ b/index.html
@@ -591,34 +591,15 @@
 
       <!-- Features (home) -->
       <section id="home-features" class="banner features">
-        <div class="container">
-          <h2 id="maxcentive-platform" class="align-center mb-1 pt-pb-2 h4 all-caps">MaxCentive Features</h2>
+        <div class="container pt-4 pr-pl-4 pb-0">
+          <h2 id="maxcentive-platform" class="align-center mb-3 pt-2 h4 all-caps">MaxCentive Features</h2>
+          <!-- feature items -->
           <div class="grid-wrap">
             <!-- feature -->
             <div class="feature">
-              <div class="card">
+              <div class="card theme-rust">
                 <!-- media item -->
-                <figure class="media-item lazyload">
-                  <picture>            
-                    <img src="images/content/img-content-project-mgmt-wide.jpg" data-src="images/content/img-content-project-mgmt-wide.jpg" class="lazyload" alt="Project manager writing on a whiteboard.">
-                    <noscript>
-                      <img src="images/content/img-content-analytics-wide.jpg" alt="Project manager writing on a whiteboard.">
-                    </noscript>
-                  </picture>
-                </figure>
-                <!-- copy -->
-                <div class="card-block">
-                  <h4 class="card-title">Commissions</h4>
-                  <p class="card-text text-base">MaxCentive has proven capabilities in many types of testing. MaxCentive helps companies rethink and reinvent their testing approach by reducing risk and costs while delivering continuous quality efficiently.</p>
-                  <a href="#" class="btn btn-round btn-primary">Read More</a>
-                </div>
-              </div>
-            </div>
-            <!-- feature -->
-            <div class="feature">
-              <div class="card">
-                <!-- media item -->
-                <figure class="media-item lazyload">
+                <figure class="media-item lazyload">                  
                   <picture>            
                     <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
                     <noscript>
@@ -628,15 +609,15 @@
                 </figure>
                 <!-- copy -->
                 <div class="card-block">
-                  <h4 class="card-title">Payments</h4>
-                  <p class="card-text text-base">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
-                  <a href="#" class="btn btn-round btn-primary">Read More</a>
+                  <h4 class="card-title">Commissions</h4>
+                  <p class="card-text">MaxCentive enables its Customers to not only build complex plans but also track their performance in real-time and based on data insights that will help achieve best results.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
             </div>
             <!-- feature -->
             <div class="feature">
-              <div class="card">
+              <div class="card theme-teal">
                 <!-- media item -->
                 <figure class="media-item lazyload">
                   <picture>            
@@ -648,13 +629,45 @@
                 </figure>
                 <!-- copy -->
                 <div class="card-block">
+                  <h4 class="card-title">Payments</h4>
+                  <p class="card-text">At a high-level, MaxCentive is a SaaS application that is designed to address the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- feature -->
+            <div class="feature">
+              <div class="card theme-blue-rich">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                    <noscript>
+                      <img src="images/content/img-content-testing-wide.jpg" alt="Illustration of testing data process.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
                   <h4 class="card-title">Loyalty</h4>
-                  <p class="card-text text-base">MaxCentive have developed their own proprietary Framework for Automated Regression testing. The following is just an example of the coverage this framework offers for some of the popular Environment components and Browsers.</p>
-                  <a href="#" class="btn btn-round btn-primary">Read More</a>
+                  <p class="card-text">MaxCentive is a completely integrated and white-label payments hub based on blockchain technology for financial institutions and enterprise customers.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
                 </div>
               </div>
             </div>
           </div>
+          <!-- media item (full) -->
+          <figure class="media-item dash-sample-wide mb-0 pt-2 w-100 lazyload">
+            <figcaption>A dashboard interface example of our amazing app.</figcaption>
+            <picture>
+              <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
+              <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
+                alt="Examples of MaxCentive CRM interface.">
+              <noscript>
+                <img src="images/content/img-content-app-01-wide-LG.png" alt="Examples of MaxCentive CRM interface.">
+              </noscript>              
+            </picture>
+          </figure>
         </div>
       </section>
 
@@ -716,12 +729,12 @@
       </section>
 
       <!-- Contact Form -->
-      <section class="bg-architect-light contact-form pt-4 pb-0">
-        <div class="container pt-4 pr-pl-3">
+      <section class="bg-architect-light contact-form pt-pb-4">
+        <div class="container pt-pb-4">
 
           <!-- Contact Form -->
           <form id="contact-form" method="post" class="mr-ml-a mw-30em" novalidate>
-            <h2 class="border-title align-center mb-4 pb-1">Get in touch with us</h2>
+            <h2 class="all-caps align-center h5 mb-4">Get in touch with us</h2>
             <div class="form-wrap">
               <!-- Name -->
               <div class="form-group mb-2">
@@ -751,7 +764,7 @@
           </form>
 
           <!-- media item (full) -->
-          <figure class="media-item mb-0 pt-4 w-100 lazyload">
+          <figure class="media-item mb-0 pt-4 w-100 lazyload" hidden>
             <picture>
               <source media="(min-width: 40em)" srcset="images/content/img-content-app-03-wide-LG.png" class="lazyload" alt="Examples of MaxCentive CRM interface.">
               <img src="images/content/img-content-app-01-wide-LG.png" data-src="images/content/img-content-app-01-wide-LG.png" class="lazyload"
