--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
             <div class="card-block">
               <h2 id="what-is-maxcentive" class="card-title">What is MaxCentive?</h2>
               <p class="card-text">MaxCentive is a completely integrated and white-label payments hub based on blockchain technology for financial institutions and enterprise customers. The MaxCentive platform is a single cloud-based end-to-end platform to create, process and manage all cash and non-cash transactions.</p>
-              <a href="#" class="btn btn-lg btn-text">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+              <a href="#" class="btn btn-text text-md">Find out how <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
@@ -553,7 +553,7 @@
             <div class="card-block">
               <h2 id="integration-services" class="card-title">Who Should Use MaxCentive?</h2>
               <p class="card-text">MaxCentive is designed to be used by Organizations of different shapes and sizes. We cater to every Organization from one-man band to a company of hundreds of thousands and everybody in between. Since MaxCentive is a SaaS application, it is ideal for any business that wants to focus on its core business and not worry about managing complex.</p>
-              <a href="#" class="btn btn-lg btn-text">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+              <a href="#" class="btn btn-text text-md">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
@@ -583,18 +583,18 @@
             <div class="card-block bg-analytics">
               <h2 id="advanced-testing" class="card-title">Why Use MaxCentive?</h2>
               <p class="card-text">MaxCentive is a rule-based software that enables Organizations to build unique plans that are optimized for their success. These plans pertain to Commissions, Loyalty, Payments and Incentives.</p>
-              <a href="#" class="btn btn-lg btn-text">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
+              <a href="#" class="btn btn-text text-md">Take a closer look <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>
             </div>
           </div>
         </div>
       </section>
 
       <!-- Features (home) -->
-      <section id="home-features" class="banner features">
+      <section class="banner grid-banner features">
         <div class="container pt-4 pr-pl-4 pb-0">
-          <h2 id="maxcentive-platform" class="align-center mb-3 pt-2 h4 all-caps">MaxCentive Features</h2>
+          <h2 class="align-center mb-3 pt-2 h4">MaxCentive Features</h2>
           <!-- feature items -->
-          <div class="grid-wrap">
+          <div class="grid-wrap" hidden>
             <!-- feature -->
             <div class="feature">
               <div class="card theme-rust">
@@ -699,9 +699,9 @@
                 <div class="card card-row card-row-rev card-clean">
                   <div class="card-block">
                     <h2 class="card-title">"I'm able to focus on my goals."</h2>
-                    <p class="card-text">Since MaxCentive is a SaaS application, it is ideal for any business that wants to focus on its core business and not worry about managing complex.</p>
+                    <p class="card-text">Since MaxCentive is a SaaS application, it is ideal for any business that wants to focus on its core business and not worry about managing complex software.</p>
                     <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-2.svg" alt="Testimonial Person">Michelle
-                      Williams <span class="title">Director of Marketing - Salesforce</span></p>
+                      Williams <span class="title">Director of Marketing - Concordus Applications</span></p>
                     <!--<a href="#" class="btn btn-lg btn-text">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
                   </div>
                 </div>
@@ -726,15 +726,85 @@
           $('.carousel-testimonial').carousel({
           })
         </script>
+      </section>     
+
+      <!-- Services (home) -->
+      <section class="banner grid-banner services">
+        <div class="container p-4">
+          <h2 class="align-center mb-3 pt-2 h4">MaxCentive Services</h2>
+          <!-- feature items -->
+          <div class="grid-wrap">
+            <!-- service -->
+            <div class="feature">
+              <div class="card theme-rust">
+                <!-- media item -->
+                <figure class="media-item lazyload">                  
+                  <picture>            
+                    <img src="images/content/img-content-security-dashboard-wide.jpg" data-src="images/content/img-content-security-dashboard-wide.jpg" class="lazyload" alt="Dashboard user interface example.">
+                    <noscript>
+                      <img src="images/content/img-content-security-dashboard-wide.jpg" alt="Dashboard user interface example.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Customer Support</h4>
+                  <p class="card-text">MaxCentive enables its customers to take care of optimum performance of running your MaxCentive instance, so our customers don’t have to manage complex and expensive infrastructure.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- service -->
+            <div class="feature">
+              <div class="card theme-teal">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" data-src="images/content/img-content-bigdata-analysis-03-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                    <noscript>
+                      <img src="images/content/img-content-bigdata-analysis-03-wide.jpg" alt="Illustration of testing data process.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Training Resources</h4>
+                  <p class="card-text">At a high-level, MaxCentive is a SaaS application that is designed to address the Commissions, Incentives, Payments, Loyalty and Analytics needs of any business in the simplest manner possible.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
+                </div>
+              </div>
+            </div>
+            <!-- service -->
+            <div class="feature">
+              <div class="card theme-blue-rich">
+                <!-- media item -->
+                <figure class="media-item lazyload">
+                  <picture>            
+                    <img src="images/content/img-content-testing-wide.jpg" data-src="images/content/img-content-testing-wide.jpg" class="lazyload" alt="Illustration of testing data process.">
+                    <noscript>
+                      <img src="images/content/img-content-testing-wide.jpg" alt="Illustration of testing data process.">
+                    </noscript>
+                  </picture>
+                </figure>
+                <!-- copy -->
+                <div class="card-block">
+                  <h4 class="card-title">Sales Consulting</h4>
+                  <p class="card-text">MaxCentive is a completely integrated payments hub for financial institutions and enterprise customers. MaxCentive handles the most complex plans and lets its customers focus on success.</p>
+                  <a href="#" class="btn btn-round btn-outline">Read More</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
-      <!-- Contact Form -->
+       <!-- Contact Form -->
       <section class="bg-architect-light contact-form pt-pb-4">
         <div class="container pt-pb-4">
 
           <!-- Contact Form -->
           <form id="contact-form" method="post" class="mr-ml-a mw-30em" novalidate>
-            <h2 class="all-caps align-center h5 mb-4">Get in touch with us</h2>
+            <h2 class="align-center h4 mb-4">Get in touch with us</h2>
             <div class="form-wrap">
               <!-- Name -->
               <div class="form-group mb-2">
@@ -755,9 +825,9 @@
                 <p class="help-block text-danger"></p>
               </div>
               <!-- button -->
-              <div class="align-center pt-3">
-                <button type="submit" class="btn btn-brand mb-2">Continue</button>
-                <p class="align-center mb-2 text-sm sans-serif">By clicking "Continue" I agree to MaxCentive's <a href="terms.html">Terms of Service</a>.</p>
+              <div class="text-center pt-2">
+                <button type="submit" class="btn btn-brand mb-3">Send</button>
+                <p class="align-center mb-2 text-sm sans-serif hidden">By clicking "Continue" I agree to MaxCentive's <a href="terms.html">Terms of Service</a>.</p>
               </div>
 
             </div>
@@ -975,14 +1045,12 @@
       script.async = true;
 
       script.onload = function () {
-        var MontserratLight = new FontFaceObserver("Montserrat Light");
-        var Montserrat = new FontFaceObserver("Montserrat");
-        var MontserratBold = new FontFaceObserver("Montserrat Bold", {});
+        var VarelaRound = new FontFaceObserver("Varela Round");
+        var OpenSans = new FontFaceObserver("Open Sans", {});
 
         Promise.all([
-          MontserratLight.load(),
-          Montserrat.load(),
-          MontserratBold.load()
+          VarelaRound.load(),
+          OpenSans.load()
         ]).then(function () {
           html.classList.add("fonts-loaded");
           sessionStorage.fontsLoaded = true;
