added form disclaimer text

--- a/index.html
+++ b/index.html
@@ -827,6 +827,7 @@
               <!-- button -->
               <div class="text-center pt-2">
                 <button type="submit" class="btn btn-brand mb-3">Send</button>
+                <p class="align-center mb-2 text-sm sans-serif">By clicking "Send" I agree to receive MaxCentive's <a href="#.html">Contact Starter Kit</a>.</p>
                 <p class="align-center mb-2 text-sm sans-serif hidden">By clicking "Continue" I agree to MaxCentive's <a href="terms.html">Terms of Service</a>.</p>
               </div>
 
