--- a/index.html
+++ b/index.html
@@ -688,8 +688,8 @@
                   <div class="card-block">
                     <h2 id="integration-services" class="card-title">"MaxCentive makes my life easier."</h2>
                     <p class="card-text">MaxCentive makes it as easy as possible for our customers to use the application without costly help from the us.</p>
-                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-1.svg" alt="Testimonial Person"><div class="text-wrap">Jennifer
-                      Thompson <span class="title">VP of Product Development - in2m</span></div></p>
+                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-1.svg" alt="Testimonial Person"><span class="text-wrap">Jennifer
+                      Thompson <span class="title">VP of Product Development - in2m</span></span></p>
                     <!--<a href="#" class="btn btn-lg btn-text">View Case Study <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
                   </div>
                 </div>
@@ -700,8 +700,8 @@
                   <div class="card-block">
                     <h2 class="card-title">"I'm able to focus on my goals."</h2>
                     <p class="card-text">MaxCentive is ideal for any business that wants to focus on its core business and not worry about managing complex software.</p>
-                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-2.svg" alt="Testimonial Person"><div class="text-wrap">Michelle
-                      Williams <span class="title">Director of Marketing - Concordus Applications</span></div></p>
+                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-2.svg" alt="Testimonial Person"><span class="text-wrap">Michelle
+                      Williams <span class="title">Director of Marketing - Concordus Applications</span></span></p>
                     <!--<a href="#" class="btn btn-lg btn-text">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
                   </div>
                 </div>
@@ -712,8 +712,8 @@
                   <div class="card-block">
                     <h2 class="card-title">"I love using this app!"</h2>
                     <p class="card-text">MaxCentive is designed to be used for organizations of different shapes and sizes so it takes care of everything you need to succeed.</p>
-                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-6.svg" alt="Testimonial Person"><div class="text-wrap">Terrance
-                      Villareal <span class="title">UX Lead - Datatel Solutions</span></div></p>
+                    <p class="quotee"><img class="avatar avatar-md" src="images/content/1x1/img-avatar-slug-6.svg" alt="Testimonial Person"><span class="text-wrap">Terrance
+                      Villareal <span class="title">UX Lead - Datatel Solutions</span></span></p>
                     <!--<a href="#" class="btn btn-lg btn-text">Learn More <svg class="icon icon-outline"><use xlink:href="#icon-chevron-sm" /></svg></a>-->
                   </div>
                 </div>
