--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
   <link rel="apple-touch-icon" href="images/icons/favicon-180.jpg">
   <link rel="shortcut icon" href="/favicon.ico">
   <title>MaxCentive</title>
-  <!-- Bootstrap core CSS -->
-  <link href="css/bootstrap.min.css" rel="stylesheet">
   <!-- Custom styles -->
   <link href="css/styles.css" rel="stylesheet">
 </head>
@@ -593,7 +591,7 @@
       </section>
 
       <!-- Features (home) -->
-      <section class="banner grid-banner features">
+      <section class="banner features">
         <div class="container pt-4 pr-pl-4 pb-0">
           <h2 class="align-center mb-3 pt-2 h4">MaxCentive Features</h2>
           <!-- feature items -->
@@ -807,7 +805,7 @@
 
           <!-- Contact Form -->
           <form id="contact-form" method="post" class="mr-ml-a mw-30em" novalidate>
-            <h2 class="align-center h4 mb-4">Get in touch with us</h2>
+            <h2 class="align-center h4 mb-4">Get In Touch With Us</h2>
             <div class="form-wrap">
               <!-- Name -->
               <div class="form-group mb-2">
